--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -5,6 +5,7 @@
   <%= back_url_hidden_field_tag %>
 
 <h2><b>Login</b></h2>
+<p>Insira seus dados para entrar no sistema</p>
   
   <label for="username"><%=l(:field_login)%></label>
   <%= text_field_tag 'username', params[:username], :tabindex => '1', :autofocus => params[:username].blank? %>
