--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -1,5 +1,5 @@
 <h2><b>Criar conta</b></h2>
-<p>Para criar sua conta precisamos que você preencha as informações a seguir. </p>
+<p>Para criar sua conta precisamos que você preencha<br/> as informações a seguir. </p>
 
 <%= labelled_form_for @user, :url => register_path do |f| %>
 <%= error_messages_for 'user' %>
