--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -11,8 +11,8 @@
 <div class="box tabular">
 <div class="container">
   <div class="row">
-    <div class="col">col</div>
-    <div class="col">col</div>
+    <div class="col"><p><%= f.text_field :firstname, :required => true %></p></div>
+    <div class="col"><p><%= f.text_field :lastname, :required => true %></p></div>
     <div class="col">col</div>
     <div class="col">col</div>
   </div>
@@ -28,8 +28,8 @@
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
 <% end %>
 
-<p><%= f.text_field :firstname, :required => true %></p>
-<p><%= f.text_field :lastname, :required => true %></p>
+
+
 <p><%= f.text_field :mail, :required => true %></p>
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 <p><%= pref_fields.check_box :hide_mail %></p>
