--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -13,10 +13,10 @@
   <div class="row">
     <div class="col"><p><%= f.text_field :firstname, :required => true %></p></div>
     <div class="col"><p><%= f.text_field :lastname, :required => true %></p></div>
-    <div class="col"><% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
+    <div class="col">
   <p><%= custom_field_tag_with_label :user, value %></p>
-<% end %></div>
-    <div class="col">col</div>
+</div>
+    <div class="col"><% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %><% end %></div>
   </div>
 <% if @user.auth_source_id.nil? %>
   <p><%= f.text_field :login, :size => 25, :required => true %></p>
