--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -14,7 +14,7 @@
     <div class="col"><p><%= f.text_field :firstname, :required => true %></p></div>
     <div class="col"><p><%= f.text_field :lastname, :required => true %></p></div>
     <div class="col">
-        <% @user.custom_field_values.radio {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
+        <% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
           <p><%= custom_field_tag_with_label :user, value %></p>
         <% end %>
     </div>
