--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -4,22 +4,7 @@
 <%= labelled_form_for @user, :url => register_path do |f| %>
 <%= error_messages_for 'user' %>
 
-
-
-
-
 <div class="box tabular">
-<div class="container">
-  <div class="row">
-    <div class="col"><p><%= f.text_field :firstname, :required => true %></p></div>
-    <div class="col"><p><%= f.text_field :lastname, :required => true %></p></div>
-    <div class="col">
-        <% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
-          <p><%= custom_field_tag_with_label :user, value %></p>
-        <% end %>
-    </div>
-    
-  </div>
 <% if @user.auth_source_id.nil? %>
   <p><%= f.text_field :login, :size => 25, :required => true %></p>
 
@@ -32,17 +17,21 @@
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
 <% end %>
 
-
-
+<p><%= f.text_field :firstname, :required => true %></p>
+<p><%= f.text_field :lastname, :required => true %></p>
 <p><%= f.text_field :mail, :required => true %></p>
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 <p><%= pref_fields.check_box :hide_mail %></p>
 <% end %>
 
 
+<% unless @user.force_default_language? %>
+<p><%= f.select :language, lang_options_for_select %></p>
+<% end %>
 
-
-
+<% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
+  <p><%= custom_field_tag_with_label :user, value %></p>
+<% end %>
 </div>
 
 <%= submit_tag l(:button_submit) %>
