--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -25,5 +25,6 @@
   <input type="submit" name="login" value="<%=l(:button_login)%>" tabindex="5" id="login-submit" />
   <% end %>
 </div>
+<p>É novo por aqui? Criar conta</p>
 
 <%= call_hook :view_account_login_bottom %>
