--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -24,7 +24,7 @@
   
   <input type="submit" name="login" value="<%=l(:button_login)%>" tabindex="5" id="login-submit" />
   <% end %>
-<p>É novo por aqui? Criar conta</p>
+<center><p>É novo por aqui? Criar conta</p></center>
 </div>
 
 
