--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -24,7 +24,7 @@
   
   <input type="submit" name="login" value="<%=l(:button_login)%>" tabindex="5" id="login-submit" />
   <% end %>
-<center><p>É novo por aqui? Criar conta</p></center>
+<center><p>É novo por aqui? <a href="http://191.252.196.83:81/account/register">Criar conta</a></p></center>
 </div>
 
 
