--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -70,7 +70,7 @@
 
     <a href="#" class="mobile-toggle-button js-flyout-menu-toggle-button"></a>
 
-    <%= RETIRAR SEMPRE a barra de pesquisa rápida 'quick-search' -%>
+    <!-- RETIRAR SEMPRE a barra de pesquisa rápida 'quick-search' -->
     <% if User.current.logged? || !Setting.login_required? || false %>
     <div id="quick-search">
         <%= form_tag(search_path(id: @project), :method => :get ) do %>
