--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Informar dados do novo Cliente</h3>
 
-<%= form_for @cliente, url: create_cliente do |f| %>
+<%= form_for @cliente, url: cliente_index_path do |f| %>
 
 <div style='float: left; width: 33%'>
     <div class="form-group">
