--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -6,8 +6,8 @@
 
 <div style='float: left; width: 33%'>
     <div class="form-group">
-        <%= f.label :nomeEmpresa, 'Nome da Empresa' %>
-        <%= f.text_field :nomeEmpresa, class: "form-control" %>
+        <%= f.label :empresaNome, 'Nome da Empresa' %>
+        <%= f.text_field :empresaNome, class: "form-control" %>
     </div>
 </div>
 <div style='clear: both'></div>
