--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -1,6 +1,8 @@
 # encoding: UTF-8
 
-<h3>Informar dados do novo Cliente</h3>
+<h2><b>Criar Conta</b></h2>
+<p>Para criar sua conta precisamos que você preencha<br/>
+as informações a seguir.</p>
 
 <%= form_for @cliente, url: cliente_index_path do |f| %>
 
