--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -6,6 +6,12 @@
 <h2><b>Criar Conta</b></h2>
 <h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
 
+<div style='float: left; width: 33%'>
+    <div class="form-group">
+        <%= f.label :empresaNome, 'Nome da Empresa' %>
+        <% if @user.auth_source_id.nil? %>
+    </div>
+
 <%= form_for @cliente, url: cliente_index_path do |f| %>
 
   <p><%= f.text_field :login, :size => 25, :required => true %></p>
