--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -1,7 +1,7 @@
 # encoding: UTF-8
 
 
-<div id="login-form">
+<div class="container">
 
 <h2><b>Criar Conta</b></h2>
 <h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
