--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -5,18 +5,33 @@
 
 <h2><b>Criar Conta</b></h2>
 <h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
-
+<%= form_for @cliente, url: cliente_index_path do |f| %>
    <div style='float: left; width: 33%'>
     <div class="form-group">
         
-        
+        <p><%= f.text_field :login, :size => 25, :required => true %></p>
         
     </div>
    </div>
 
-<%= form_for @cliente, url: cliente_index_path do |f| %>
+   <div style='float: left; width: 33%'>
+    <div class="form-group">
+        
+ <p><%= f.password_field :password, :size => 25, :required => true %>
+  <em class="info"><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em>
+  <% if Setting.password_required_char_classes.any? %>
+    <em class="info"><%= l(:text_characters_must_contain, :character_classes => Setting.password_required_char_classes.collect{|c| l("label_password_char_class_#{c}")}.join(", ")) %></em>
+  <% end %>
+  </p>
+  <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
+        
+    </div>
+   </div>
 
-<p><%= f.text_field :login, :size => 25, :required => true %></p>
+
+
+
+
 
   
 
