--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -6,9 +6,9 @@
 <h2><b>Criar Conta</b></h2>
 <h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
 <%= form_for @cliente, url: cliente_index_path do |f| %>
-   <div style='float: left; width: 33%'>
+   <div style='float: left; width: 40%'>
     <div class="form-group">
-        
+        <%= f.label :user, 'Usuário' %>
         <p><%= f.text_field :login, :size => 25, :required => true %></p>
         
     </div>
