--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -9,7 +9,33 @@
 
 <br/>
 <h3>Informações Gerais</h3>
-   <div style='float: left; width: 40%'>
+   
+ <div style='float: left; width: 40%'>
+   
+    <div class="form-group">
+        <%= f.label :text_field, 'Nome' %>
+        <p><%= f.text_field :firstname, :required => true %></p>
+        
+    </div>
+   </div>
+ <div style='float: left; width: 40%'>
+   <div class="form-group">
+        <%= f.label :text_field,Sobrenome' %>
+        <p><%= f.text_field :lastname, :required => true %></p>
+        
+    </div>
+   </div>
+ <div style='float: left; width: 40%'>
+   <div class="form-group">
+        <%= f.label :text_field, 'Email' %>
+        <p><%= f.text_field :mail, :required => true %></p>
+        
+    </div>
+   </div>
+
+
+
+<div style='float: left; width: 40%'>
     <div class="form-group">
         <%= f.label :user, 'Usuário' %>
         <p><%= f.text_field :login, :size => 25, :required => true %></p>
