--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -10,23 +10,23 @@
 <br/>
 <h3>Informações Gerais</h3>
    
- <div style='float: left; width: 40%'>
-   
-    <div class="form-group">
+ <div class="row align-items-start">
+  
+   <div class="col">
         <%= f.label :text_field, 'Nome' %>
         <p><%= f.text_field :firstname, :required => true %></p>
     </div>
  </div>
 
- <div style='float: left; width: 40%'>
-   <div class="form-group">
+ <div class="row align-items-start">
+   <div class="col">
         <%= f.label :text_field, 'Sobrenome' %>
         <p><%= f.text_field :lastname, :required => true %></p>
    </div>
  </div>
 
- <div style='float: left; width: 40%'>
-   <div class="form-group">
+ <div class="row align-items-start">
+   <div class="col">
         <%= f.label :text_field, 'Email' %>
         <p><%= f.text_field :mail, :required => true %></p>
    </div>
@@ -34,8 +34,8 @@
 
 
 
-<div style='float: left; width: 40%'>
-    <div class="form-group">
+<div class="row align-items-start">
+    <div class="col">
         <%= f.label :user, 'Usuário' %>
         <p><%= f.text_field :login, :size => 25, :required => true %></p>
     </div>
