--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -9,24 +9,22 @@
 
 <br/>
 <h3>Informações Gerais</h3>
-   
- <div style='float: left; width: 33%'>
-  
-   <div class="form-group">
-        <%= f.label :text_field, 'Nome' %>
-        <p><%= f.text_field :firstname, :required => true %></p>
-    </div>
- </div>
 
- <div style='float: left; width: 33%'>
+ <div class="row align-items-start">
+    <div class="col">
+       <%= f.label :text_field, 'Nome' %>
+       <p><%= f.text_field :firstname, :required => true %></p>
+    </div>
+   
+<div style='float: left; width: 33%'>
    <div class="form-group">
         <%= f.label :text_field, 'Sobrenome' %>
         <p><%= f.text_field :lastname, :required => true %></p>
    </div>
  </div>
 
- <div style='float: left; width: 33%'>
-   <div class="form-group">
+ <div class="row align-items-end">
+    <div class="col">
         <%= f.label :text_field, 'Email' %>
         <p><%= f.text_field :mail, :required => true %></p>
    </div>
