--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -16,8 +16,8 @@
        <p><%= f.text_field :firstname, :required => true %></p>
     </div>
    
-<div style='float: left; width: 33%'>
-   <div class="form-group">
+<div class="row align-items-center">
+    <div class="col">
         <%= f.label :text_field, 'Sobrenome' %>
         <p><%= f.text_field :lastname, :required => true %></p>
    </div>
