--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -12,7 +12,7 @@
 
 
        <%= f.label :text_field, 'Nome' %>
-       <p><%= f.text_field :firstname, :required => true %></p>
+       <p class="text-xl-start"><%= f.text_field :firstname, :required => true %></p>
    
    
 
