--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -41,6 +41,7 @@
     <em class="info"><%= l(:text_characters_must_contain, :character_classes => Setting.password_required_char_classes.collect{|c| l("label_password_char_class_#{c}")}.join(", ")) %></em>
   <% end %>
   </p>
+  <%= f.label :password_field, 'Conformação de Senha' %>
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
 
 
