--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -5,7 +5,7 @@
 
 <h2><b>Criar Conta</b></h2>
 <h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
-<%= form_for @cliente, url: cliente_create_path do |f| %>
+<%= form_for @cliente,  do |f| %>
 
 <br/>
 <h3>DADOS DO CLIENTE</h3>
