--- a/app/views/cliente/aguarde.html.erb
+++ b/app/views/cliente/aguarde.html.erb
@@ -1,1 +1,10 @@
 <h2>Aguarde a aprovação!</h2>
+<div id="login-form">
+
+<h2><b>ACESSO SOLICITADO</b></h2>
+<p>Aguarde a liberação pelo Administrador</p>
+  
+   <input type="submit" name="login" value="<%=l(:button_login)%>" tabindex="5" id="login-submit" />
+  <% end %>
+<center><p>É novo por aqui? <a href="http://191.252.196.83:81/account/register">Criar conta</a></p></center>
+</div>
