--- a/app/views/cliente/aguarde.html.erb
+++ b/app/views/cliente/aguarde.html.erb
@@ -1,10 +1,11 @@
-<h2>Aguarde a aprovação!</h2>
-<div id="login-form">
 
+<div id="login-form">
+<center>
 <h2><b>ACESSO SOLICITADO</b></h2>
 <p>Aguarde a liberação pelo Administrador</p>
+  <div class="d-grid gap-2 col-6 mx-auto">
+  <button class="btn btn-primary-dark" type="button">Ir para o Login</button>
+  </center>
+</div>
   
-   <input type="submit" name="login" value="" tabindex="5" id="login-submit" />
-  
-<center><p>É novo por aqui? <a href="http://191.252.196.83:81/account/register">Criar conta</a></p></center>
 </div>
