--- a/app/views/cliente/aguarde.html.erb
+++ b/app/views/cliente/aguarde.html.erb
@@ -4,7 +4,7 @@
 <h2><b>ACESSO SOLICITADO</b></h2>
 <p>Aguarde a liberação pelo Administrador</p>
   <div class="d-grid gap-2 col-6 mx-auto">
-  <button class="btn btn-primary-dark" type="button">Ir para o Login</button>
+  <button class="btn btn-primary" type="button">Ir para o Login</button>
   </center>
 </div>
   
