--- a/app/views/cliente/aguarde.html.erb
+++ b/app/views/cliente/aguarde.html.erb
@@ -2,9 +2,10 @@
 <div id="login-form">
 <center>
 <h2><b>ACESSO SOLICITADO</b></h2>
-<p>Aguarde a liberação pelo Administrador</p>
+<h4>Aguarde a liberação pelo Administrador</h4>
   <div class="d-grid gap-2 col-6 mx-auto">
-  <button class="btn btn-primary" type="button">Ir para o Login</button>
+<input type="submit" name="login" value="<%=l(:button_login)%>" tabindex="5" id="login-submit" />
+  <% end %>
   </center>
 </div>
   
