--- a/app/views/cliente/aguarde.html.erb
+++ b/app/views/cliente/aguarde.html.erb
@@ -4,8 +4,8 @@
 <h2><b>ACESSO SOLICITADO</b></h2>
 <h4>Aguarde a liberação pelo Administrador</h4>
   <div class="d-grid gap-2 col-6 mx-auto">
-<input type="submit" name="login" value="<%=l(:button_login)%>" tabindex="5" id="login-submit" />
-  <% end %>
+<input type="submit" name="login" value="" tabindex="5" id="login-submit" />
+  
   </center>
 </div>
   
