--- a/app/views/cliente/aguarde.html.erb
+++ b/app/views/cliente/aguarde.html.erb
@@ -4,7 +4,7 @@
 <h2><b>ACESSO SOLICITADO</b></h2>
 <h4>Aguarde a liberação pelo Administrador</h4>
   <div class="d-grid gap-2 col-6 mx-auto">
-<input type="submit" name="login" value="" tabindex="5" id="login-submit" />
+<input type="submit" name="login" value="http://201.76.43.189:88/login" tabindex="5" id="login-submit" />
   
   </center>
 </div>
