--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -1,11 +1,33 @@
 # encoding: UTF-8
-
-
 <div class="container">
 
 <h2><b>Criar Conta</b></h2>
 <h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
+
 <%= form_for @cliente, url: { action: "create" } do |f| %>
+
+<%= labelled_form_for @user, :url => register_path do |f| %>
+<%= error_messages_for 'user' %>
+
+<div class="box tabular">
+<% if @user.auth_source_id.nil? %>
+  <p><%= f.text_field :login, :size => 25, :required => true %></p>
+
+  <p><%= f.password_field :password, :size => 25, :required => true %>
+  <em class="info"><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em>
+  <% if Setting.password_required_char_classes.any? %>
+    <em class="info"><%= l(:text_characters_must_contain, :character_classes => Setting.password_required_char_classes.collect{|c| l("label_password_char_class_#{c}")}.join(", ")) %></em>
+  <% end %>
+  </p>
+  <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
+<% end %>
+
+
+
+
+<h2><b>Criar Conta</b></h2>
+<h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
+
 
 <br/>
 <h3>DADOS DO CLIENTE</h3>
