--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -37,14 +37,16 @@
         <%= f.label :user, 'Usuário' %>
         <p><%= f.text_field :login, :size => 25, :required => true %></p>
 
-       <%= f.label :password_field, 'Senha' %>
-         <p><%= f.password_field :password, :size => 25, :required => true %>
+  <%= f.label :password_field, 'Senha' %>
+  <p><%= f.password_field :password, :size => 25, :required => true %>
   <em class="info"><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em>
+  
   <% if Setting.password_required_char_classes.any? %>
     <em class="info"><%= l(:text_characters_must_contain, :character_classes => Setting.password_required_char_classes.collect{|c| l("label_password_char_class_#{c}")}.join(", ")) %></em>
   <% end %>
   </p>
-  <%= f.label :password_field, 'Conformação de Senha' %>
+  
+  <%= f.label :password_field, 'Confirmação de Senha' %>
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
 
 
