--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -29,7 +29,7 @@
 
        
         <%= f.label :empresaNome, 'Nome da Empresa' %>
-        <%= f.text_field :empresaNome, class: "form-control" %>
+        <p><%= f.text_field :empresaNome, class: "form-control" %></p>
 
 
 <h2>DADOS DO USUÁRIO</h2>
