--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -6,8 +6,8 @@
 
 
 
-<h2><b>Criar Conta</b></h2>
-<h4>Para criar sua conta precisamos que você preencha as informações a seguir.</h4>
+<h3><b>Criar Conta</b></h3>
+<p>Para criar sua conta precisamos que você preencha as informações a seguir.</p>
 <%= form_for @cliente, url: { action: "create" } do |f| %>
 
 
