--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -24,7 +24,7 @@
 
  <div class="col">
   <%= f.label :password_field, 'Confirmação de Senha' %>
-  <p class="form-control"><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
+  <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
     </div>
   </div>
 </div>
