--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
 <h3><b>Criar Conta</b></h3>
-  <p>Para criar sua conta precisamos que você preencha as informações a seguir.</p><br/><br/>
+  <p>Para criar sua conta precisamos que você preencha as informações a seguir.</p><br/>
 <%= form_for @cliente, url: { action: "create" } do |f| %>
 <h2>DADOS DO USUÁRIO</h2>
   <div class="row">
