--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -29,19 +29,33 @@
   </div>
 </div>
 
-<form class="row gy-2 gx-3 align-items-center">
-  <div class="col-auto">
+<h4>DADOS DO CLIENTE</h4>
+  <div class="row">
+    <div class="col">
+      <%= f.label :text_field, 'Nome' %>
+       <p class="text-xl-start"><%= f.text_field :firstname, :required => true %></p>
+    </div>
+    <div class="col">
+  
+     <%= f.label :text_field, 'Sobrenome' %>
+     <p><%= f.text_field :lastname, :required => true %></p>
   
 
+    </div>
+      
 
-  
-        
+ <div class="col">
+ <%= f.label :text_field, 'Email' %>
+        <p><%= f.text_field :mail, :required => true %></p>
+    </div>
 
-
-
-
+ <div class="col">
+<%= f.label :empresaNome, 'Nome da Empresa' %>
+        <p><%= f.text_field :empresaNome, class: "form-control" %></p>
+    </div>
   </div>
-
+ </div>
+</div>
 
 
 
@@ -64,22 +78,18 @@
 <h3>DADOS DO CLIENTE</h3>
 
 
-       <%= f.label :text_field, 'Nome' %>
-       <p class="text-xl-start"><%= f.text_field :firstname, :required => true %></p>
+       
    
    
 
-        <%= f.label :text_field, 'Sobrenome' %>
-        <p><%= f.text_field :lastname, :required => true %></p>
+        
 
 
 
-        <%= f.label :text_field, 'Email' %>
-        <p><%= f.text_field :mail, :required => true %></p>
+        
 
        
-        <%= f.label :empresaNome, 'Nome da Empresa' %>
-        <p><%= f.text_field :empresaNome, class: "form-control" %></p>
+        
 
 
 
