--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -1,5 +1,7 @@
 # encoding: UTF-8
 
+<div class="container-md">
+
 <div class="container">
 <h3><b>Criar Conta</b></h3>
   <p>Para criar sua conta precisamos que você preencha as informações a seguir.</p><br/>
@@ -63,5 +65,7 @@
         <%= f.submit "Inserir novo Cliente", class:" icon icon-add float-right" %>
     </div>
 <% end %>
+</div>
+
 </div>
 
