--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -17,12 +17,16 @@
   </p>
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
 <% end %>
-<br/>
-<h3>Dados da Empresa </h3>
-<p><%= f.text_field :empresaNome,  true %></p>
-<p><%= f.text_field :uf, true %></p>
-<p><%= f.text_field :cnpj, true %></p>
-<p><%= f.text_field :outorgas, true %></p>
+
+<%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
+<p><%= pref_fields.check_box :hide_mail %></p>
+<% end %>
+
+
+
+<% unless @user.force_default_language? %>
+<p><%= f.select :language, lang_options_for_select %></p>
+<% end %>
 
 
 
