--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -22,6 +22,13 @@
 <p><%= pref_fields.check_box :hide_mail %></p>
 <% end %>
 
+<p><%= f.text_field :firstname, :required => true %></p>
+<p><%= f.text_field :lastname, :required => true %></p>
+<p><%= f.text_field :mail, :required => true %></p>
+<%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
+
+<% end %>
+
 
 
 <% unless @user.force_default_language? %>
