--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -25,6 +25,7 @@
 <p><%= f.text_field :firstname, :required => true %></p>
 <p><%= f.text_field :lastname, :required => true %></p>
 <p><%= f.text_field :mail, :required => true %></p>
+<p><%= f.text_field :empresaNome, : => true %></p>
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 
 <% end %>
