--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -1,6 +1,6 @@
 <h2><%=l(:label_register)%></h2>
 
-<%= labelled_form_for @user, :url => register_path do |f| %>
+<%= labelled_form_for @cliente_user, :url => register_path do |f| %>
 <%= error_messages_for 'user' %>
 
 <div class="box tabular">
