--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -1,6 +1,6 @@
 <h2><%=l(:label_register)%></h2>
 
-<%= labelled_form_for @cliente_user, :url => register_path do |f| %>
+<%= labelled_form_for @user, :url => register_path do |f| %>
 <%= error_messages_for 'user' %>
 
 <div class="box tabular">
@@ -29,23 +29,6 @@
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 
 <% end %>
-
-
-<br/>
-<h3>Dados da Empresa</h3>
-<p><%= f.text_field :empresaNome %></p>
-<p><%= f.text_field :uf %></p>
-<p><%= f.text_field :cnpj %></p>
-<p><%= f.text_field :outorgas %></p>
-
-<br/>
-<h3>Dados Resposável Empresa</h3>
-<p><%= f.text_field :nomeResponsavelEmpresa %></p>
-<p><%= f.text_field :emailResponsavelEmpresa %></p>
-<p><%= f.text_field :celularResponsavelEmpresa %></p>
-<p><%= f.text_field :celularResponsavelCadastro %></p>
-<%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
-
 <% end %>
 
 
