--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -43,7 +43,7 @@
 <% end %>
 </div>
 
-<%= text_field(:cliente, :uf) %>
+<p>UF <%= text_field(:cliente, :uf) %></p>
 
 <%= submit_tag l(:button_submit) %>
 <% end %>
