--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -41,9 +41,10 @@
 <% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
   <p><%= custom_field_tag_with_label :user, value %></p>
 <% end %>
+<p><b>UF</b> <%= text_field(:cliente, :uf) %></p>
 </div>
 
-<p>UF <%= text_field(:cliente, :uf) %></p>
+<p><b>UF</b> <%= text_field(:cliente, :uf) %></p>
 
 <%= submit_tag l(:button_submit) %>
 <% end %>
