--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -42,7 +42,7 @@
   <p><%= custom_field_tag_with_label :user, value %></p>
 <% end %>
 <p><b>UF</b> <%= text_field(:cliente, :uf) %></p>
-<p><%= text_field :UF %></p>
+<p><%= text_field :uf %></p>
 </div>
 
 <p><b>UF</b> <%= text_field(:cliente, :uf) %></p>
