--- a/app/views/cliente/new.html.erb
+++ b/app/views/cliente/new.html.erb
@@ -1,71 +1,32 @@
-# encoding: UTF-8
+<h2><b>Criar conta</b></h2>
+<p>Para criar sua conta precisamos que você preencha<br/> as informações a seguir. </p>
 
-<div class="container-md">
+<%= labelled_form_for @clienteUser, :url => register_path do |f| %>
+<%= error_messages_for 'user' %>
 
-<div class="container">
-<h3><b>Criar Conta</b></h3>
-  <p>Para criar sua conta precisamos que você preencha as informações a seguir.</p><br/>
-<%= form_for @cliente, url: { action: "create" } do |f| %>
-<h4>DADOS DO USUÁRIO</h4>
-  <div class="row">
-    <div class="col">
-      <%= f.label :user, 'Usuário' %>
-        <p><%= f.text_field :login, :size => 25, :required => true %></p>
-    </div>
-    <div class="col">
-  <%= f.label :password_field, 'Senha' %>
+<div class="box tabular">
+<% if @clienteUser.auth_source_id.nil? %>
+  <p><%= f.text_field :login, :size => 25, :required => true %></p>
+
   <p><%= f.password_field :password, :size => 25, :required => true %>
   <em class="info"><%= l(:text_caracters_minimum, :count => Setting.password_min_length) %></em>
-  
   <% if Setting.password_required_char_classes.any? %>
     <em class="info"><%= l(:text_characters_must_contain, :character_classes => Setting.password_required_char_classes.collect{|c| l("label_password_char_class_#{c}")}.join(", ")) %></em>
   <% end %>
   </p>
-    </div>
-      
-
- <div class="col">
-  <%= f.label :password_field, 'Confirmação de Senha' %>
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
-    </div>
-  </div>
-</div>
-
-<br/>
-
-<div class="container">
-
-<h4>DADOS DO CLIENTE</h4>
-  <div class="row">
-    <div class="col">
-      <%= f.label :text_field, 'Nome' %>
-       <p class="text-xl-start"><%= f.text_field :firstname, :required => true %></p>
-  </div>
-    <div class="col">
-  
-     <%= f.label :text_field, 'Sobrenome' %>
-     <p><%= f.text_field :lastname, :required => true %></p>
-    </div>
-      
-
- <div class="col">
- <%= f.label :text_field, 'Email' %>
-        <p><%= f.text_field :mail, :required => true %></p>
-  </div>
-
- <div class="col">
-<%= f.label :empresaNome, 'Nome da Empresa' %>
-        <p><%= f.text_field :empresaNome, class: "form-control" %></p>
-  </div>
-  </div>
- </div>
-
-
-    <div class="form-inline">
-        <%= f.submit "Inserir novo Cliente", class:" icon icon-add float-right" %>
-    </div>
 <% end %>
-</div>
+
+<p><%= f.text_field :firstname, :required => true %></p>
+<p><%= f.text_field :lastname, :required => true %></p>
+<p><%= f.text_field :mail, :required => true %></p>
+<%= labelled_fields_for :pref, @clienteUser.pref do |pref_fields| %>
+
+<% end %>
+
+
 
 </div>
 
+<%= submit_tag l(:button_submit) %>
+<% end %>
