--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -20,6 +20,9 @@
 <p><%= f.text_field :firstname, :required => true %></p>
 <p><%= f.text_field :lastname, :required => true %></p>
 <p><%= f.text_field :mail, :required => true %></p>
+<p><%= text_field :cnpj %></p>
+<p><%= text_field :uf %></p>
+<p><%= text_field :Responsável Empresa  %></p>
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 
 <% end %>
