--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -22,7 +22,7 @@
 <p><%= f.text_field :mail, :required => true %></p>
 <p><%= text_field :cnpj %></p>
 <p><%= text_field :uf %></p>
-<p><%= text_field :Responsável Empresa  %></p>
+<p><%= text_field :responsavel  %></p>
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 
 <% end %>
