--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -20,8 +20,14 @@
 <p><%= f.text_field :firstname, :required => true %></p>
 <p><%= f.text_field :lastname, :required => true %></p>
 <p><%= f.text_field :mail, :required => true %></p>
-<p><label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname"></p>
+<p><label for="fname">CNPJ:</label><br>
+ <input type="text" id="fname" name="fname"></p>
+<p><label for="fname">Empresa:</label><br>
+ <input type="text" id="fname" name="fname"></p>
+<p><label for="fname">UF:</label><br>
+ <input type="text" id="fname" name="fname"></p>
+<p><label for="fname">Responsável:</label><br>
+ <input type="text" id="fname" name="fname"></p>
 <%= labelled_fields_for :pref, @user.pref do |pref_fields| %>
 
 <% end %>
