--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -5,6 +5,7 @@
 <%= error_messages_for 'user' %>
 
 <div class="box tabular">
+<h3>Dados do Usuário</h3>
 <% if @user.auth_source_id.nil? %>
   <p><%= f.text_field :login, :size => 25, :required => true %></p>
 
@@ -17,9 +18,12 @@
   <p><%= f.password_field :password_confirmation, :size => 25, :required => true %></p>
 <% end %>
 
+<h3>Dados do Cliente</h3>
 <p><%= f.text_field :firstname, :required => true %></p>
 <p><%= f.text_field :lastname, :required => true %></p>
 <p><%= f.text_field :mail, :required => true %></p>
+
+<h3>Dados da Empresa</h3>
 <p><label for="fname">CNPJ:</label><br>
  <input type="text" id="" name=""></p>
 <p><label for="fname">Empresa:</label><br>
