--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -23,10 +23,13 @@
 <p><%= f.text_field :lastname, :required => true %></p>
 <p><%= f.text_field :mail, :required => true %></p>
 
-<h3>Dados da Empresa</h3>Nome:</label><br>
- <input type="text" id="" name=""></p>
-<p><label for="fname">UF:</label><br>
- <input type="text" id="CNPJ:</label><br>
+<h3>Dados da Empresa</h3>
+<p><label for="fname">Nome da Empresa:</label></p> 
+<p><input type="text" id="" name=""></p>
+<p><label for="fname">UF:</label></p>
+ <p><input type="text" id="" name=""</label></p>
+<p><label for="fname"CNPJ:</label></p>
+ <p><input type="text" id="" name=""</label></p>
 
 <h4>Outorgas de Serviço de Telecom do Cliente
 <div class="form-check">
@@ -34,18 +37,26 @@
   <label class="form-check-label" for="flexRadioDefault1">
     SCM
   </label>
+</div>
+<div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
     TV por Assinatura
   </label>
+</div>
+<div class="form-check">
    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
     STFC
   </label>
+</div>
+<div class="form-check">
   <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
     SPM-RV
   </label>
+</div>
+<div class="form-check">
    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
   <label class="form-check-label" for="flexRadioDefault1">
     Dispensa de Outorga
