--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -28,7 +28,7 @@
 <p><input type="text" id="" name=""></p>
 <p><label for="fname">UF:</label></p>
  <p><input type="text" id="" name=""</label></p>
-<p><label for="fname"CNPJ:</label></p>
+<p><label for="fname"</label>CNPJ:</p>
  <p><input type="text" id="" name=""</label></p>
 
 
