--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -25,7 +25,7 @@
 
 <h3>Dados da Empresa</h3>
 <p><label for="fname">Nome da Empresa:</label></p> 
-<p><input type="text" id="" name=""></p>
+<p> Nome da Empresa: <input type="text" id="" name=""></p>
 <p><label for="fname">UF:</label></p>
  <p><input type="text" id="" name=""</label></p>
 <p><label for="fname"</label>CNPJ:</p>
