--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -31,7 +31,7 @@
 <p><label for="fname"</label>CNPJ:</p>
  <p><input type="text" id="" name=""</label></p>
 <select class="form-select" aria-label="Default select example">
-  <option selected>Open this select menu</option>
+  <option selected>Outorgas de serviços de Telecom do Cliente </option>
   <option value="1">SCM</option>
   <option value="2">TV por Assinatura</option>
   <option value="3">STFC</option>
