--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -28,10 +28,12 @@
 <p><input type="text" id="" name=""></p>
 <p><label for="fname">UF:</label></p>
  <p><input type="text" id="" name=""</label></p>
-<p><label for="fname"</label>CNPJ:</p>
+<p><label for="fname">>CNPJ:</label</p>
  <p><input type="text" id="" name=""</label></p>
+<br/>
+<p><label for="fname">Outorgas de serviços de Telecom do Cliente </label></p>
 <select class="form-select" aria-label="Default select example">
-  <option selected>Outorgas de serviços de Telecom do Cliente </option>
+  <option selected>Selecione</option>
   <option value="1">SCM</option>
   <option value="2">TV por Assinatura</option>
   <option value="3">STFC</option>
