--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -32,14 +32,14 @@
  <p><input type="text" id="" name=""</label></p>
 <br/>
 <p><label for="fname">Outorgas de serviços</label></p>
-<select class="form-select" aria-label="Default select example">
+<p><select class="form-select" aria-label="Default select example">
   <option selected>Selecione</option>
   <option value="1">SCM</option>
   <option value="2">TV por Assinatura</option>
   <option value="3">STFC</option>
   <option value="3">SPM-RV</option>
   <option value="3">Dispensa de Outorga</option>
-</select>
+</select></p>
 
 
 
