--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,7 +9,7 @@
         <%= render :partial => 'no_data' if @no_configuration_data %>
     </div>
     <div class="col-sm-8">
-      <div class="row">
+      
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
@@ -28,7 +28,16 @@
       </div>
     </div>
   </div>
-</div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+  </div>
+
 
 
 
