--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,7 +9,7 @@
         <%= render :partial => 'no_data' if @no_configuration_data %>
     </div>
     <div class="col-sm-8">
-      
+  <div class="row">    
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-
+</div>
 
 
 </div>
