--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,36 +1,20 @@
 
 
- <div class="row">    
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+ <div class="container">
+  <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+   
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+    <div class="col">
+      <div class="p-3 border bg-light">Row column</div>
     </div>
+ 
   </div>
-
 </div>
-
 
 
   <div class="row">
