--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,32 +1,34 @@
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+<div class="row row-cols-1 row-cols-md-3 g-3">
+    <div class="col">
+        <!-- Card with default left text alignment -->
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
+                <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+    <div class="col">
+        <!-- Card with center text alignment -->
+        <div class="card text-center">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
+                <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+    <div class="col">
+    <!-- Card with right text alignment -->
+        <div class="card text-end">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some dummy text to make up the card's content. You can replace it anytime.</p>
+                <a href="#" class="btn btn-primary">Know more</a>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 
