--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,5 @@
-<div class="row row-cols-1 row-cols-md-3 g-3">
+<div class="container-fluid">
+  <div class="row row-cols-1 row-cols-md-3 g-3">
     <div class="col">
         <!-- Card with default left text alignment -->
         <div class="card">
@@ -30,6 +31,13 @@
         </div>
     </div>
 </div>
+</div>
+
+
+
+
+
+
 
 
 
