--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-xl">
+<div class="container-xxl">
   <div class="row row-cols-1 row-cols-md-3 g-3">
     <div class="col">
         <!-- Card with default left text alignment -->
